# youtube-downloader

./: .env-example  .gitignore  LICENSE  NOTICE  README.md  concat.txt  pyproject.toml
.claude/agents/: youtube-fetcher.md
.claude/skills/movie-script-writer/: SKILL.md
.claude/skills/video-content-matcher/: SKILL.md
.claude/skills/youtube-movie-maker/: SKILL.md
config/: rate_limits.json  setup.json
docs/: PLAN-playlist.md  PLAN.md  PRD-beatsync.md  PRD-images.md  PRD-mix-video-pipeline.md  PRD-mixer.md  PRD-movie-agent.md  PRD-playlist.md  PRD-tracks.md  PRD.md  TODO-playlist.md  TODO.md  user-manual.md
docs/examples/: playlist.yaml
src/: main.py
src/ytdl/: __init__.py  __main__.py  constants.py
src/ytdl/cli/: __init__.py  argdefs.py  args.py  exits.py  main.py  movie_run.py  pipeline_run.py  playlist.py  run.py  usage.py
src/ytdl/infra/: __init__.py  ffmpeg.py  ffprobe.py  jsruntime.py  ytdlp_client.py
src/ytdl/infra/playback/: __init__.py  beat_effects.py  concat.py  duration.py  engines.py  libvlc_matrix.py  moviepy_tracks.py  option2_engine.py  overlay_tracks.py  render_route.py  renderer.py  renderer_graph.py  renderer_leading.py  renderer_loop.py  sample_stream.py  stream_server.py  text_letters.py  text_shape.py  timeline.py  titles.py  transitions.py  vlc_locator.py  xfade.py
src/ytdl/sdk/: __init__.py  compose.py  download_op.py  mixins.py  movie_mixin.py  pipeline_mixin.py  probe.py  sdk.py  wiring.py
src/ytdl/services/: __init__.py  audio.py  base.py  dl_progress.py  metadata.py  subtitles.py  video.py
src/ytdl/services/analysis/: __init__.py  analyzer.py  audio_io.py  beat_time.py  beats.py  cut_planner.py  export.py  gpu.py  grid.py  profiles.py  run.py  structure.py
src/ytdl/services/llm/: __init__.py  api_provider.py  cli_provider.py  factory.py  provider.py
src/ytdl/services/mixer/: __init__.py  mixer_service.py  playlist_engine.py  sample_prep.py  sample_runner.py  sampler.py  segment.py
src/ytdl/shared/: __init__.py  concurrency.py  config.py  errors.py  gatekeeper.py  logsetup.py  queue.py  rate_limit.py  selection.py  throttle.py  usage.py  version.py
tests/: conftest.py
tests/unit/cli/: test_main.py  test_main_mix.py  test_main_playlist.py  test_main_sample_playlist.py  test_movie_pipeline_run.py  test_playlist.py
tests/unit/infra/: test_beat_effects.py  test_concat.py  test_duration.py  test_engines.py  test_engines_segments.py  test_ffmpeg.py  test_jsruntime.py  test_libvlc_matrix.py  test_moviepy_tracks.py  test_overlay_tracks.py  test_renderer.py  test_renderer_loop.py  test_stream_server.py  test_text_shape.py  test_timeline.py  test_titles.py  test_transitions.py  test_vlc_locator.py  test_xfade.py  test_ytdlp_client.py
tests/unit/sdk/: test_sdk.py  test_sdk_mix.py  test_sdk_playlist.py  test_sdk_playlist_runner.py
tests/unit/services/: test_audio.py  test_base.py  test_base_extra_opts.py  test_dl_progress.py  test_metadata.py  test_mixer_service.py  test_playlist_engine.py  test_sampler.py  test_segment.py  test_subtitles.py  test_video.py
tests/unit/shared/: test_concurrency.py  test_config.py  test_config_playback.py  test_errors_playlist.py  test_gatekeeper.py  test_gatekeeper_usage.py  test_logsetup.py  test_queue.py  test_rate_limit.py  test_selection.py  test_throttle.py  test_usage.py
(+50 files in other folders)
