[project]
name = "youtube-downloader"
version = "1.03"
description = "Windows PowerShell CLI to download YouTube video (mp4), audio (mp3), and subtitles (srt) via yt-dlp + imageio-ffmpeg."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp",
    "imageio-ffmpeg",
    "python-vlc>=3.0.21203",
    "pyyaml>=6.0.3",
    "librosa>=0.11.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ytdl"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.coverage.run]
source = ["src"]
omit = ["src/main.py", "src/ytdl/__main__.py"]

[tool.coverage.report]
fail_under = 85

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
