[project]
name = "youtube-downloader"
version = "1.05"
description = "Windows PowerShell CLI to download YouTube video (mp4), audio (mp3), and subtitles (srt) via yt-dlp + imageio-ffmpeg."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Dr. Yoram Segal", email = "segal@gal-tech.ai" }]
maintainers = [{ name = "Dr. Yoram Segal", email = "segal@gal-tech.ai" }]
license = { text = "Proprietary — All Rights Reserved, Dr. Yoram Segal <segal@gal-tech.ai>. See LICENSE; commercial use requires written permission." }
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
    "Intended Audience :: Education",
]
dependencies = [
    "yt-dlp",
    "imageio-ffmpeg",
    "python-vlc>=3.0.21203",
    "pyyaml>=6.0.3",
    "librosa>=0.11.0",
    "moviepy>=2.2.1",
    "pillow>=11.3.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ytdl"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.coverage.run]
source = ["src"]
omit = ["src/main.py", "src/ytdl/__main__.py"]

[tool.coverage.report]
fail_under = 85

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
